--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ button.white{
     display: none;
     align-items: center;
 }
+#close{
+    display: none;
+}
 /* Home Page */
 #hero{
     background-image: url("img/hero4.png");
@@ -471,6 +474,9 @@ footer .copyright{
 
 
 /* Start Media Query */
+/* ####################################
+######### IPAD DEVICE ###########
+#################################### */
 @media (max-width:768px) {
     #navbar {
         display: flex;
@@ -485,11 +491,13 @@ footer .copyright{
         background-color: #E3E6F3;
         box-shadow: 0 40px 60px rgba(0, 0,0, 0.1);
         padding: 80px 0 0 10px;
+        transition: 0.3s;
+        
     }
     #navbar li{
         margin-bottom: 25px;
     }
-    #navbar .active{
+    #navbar.active{
         right: 0px;
     }
     #mobile{
@@ -501,10 +509,210 @@ footer .copyright{
         font-size: 24px;
         padding-left: 20px;
     }
+    #close{
+        display: inline;
+        position: absolute;
+        top: 30px;
+        left: 40px;
+        color: #222;
+        font-size: 24px;
+    }
+    #shop{
+        display: none;
+    }
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    #feature {
+        justify-content: center;
+    }
+    #feature .f-box {
+        margin: 15px 15px;
+    }
+    .section-p1 {
+        padding: 40px 40px;
+    }
+    #product1 .pro-ctn {
+        justify-content: center;
+    }
+    #product1 .pro {
+       margin: 15px;
+    }
+    #banner {
+        height: 20vh;
+    }
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 30vh;       
+    }
+    #banner3 {
+        padding: 0 40px;
+    }
+    #banner3 .banner-box {
+       width: 28%;
+    }
+    #newslatter .form {
+        width: 70%;
+    }
+}
+/* ####################################
+############# MOBILE DEVICE ###########
+#################################### */
+@media (max-width: 477px) {s
+    #header {
+    padding: 10px 30px;
+    }
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    h1{
+        font-size: 38px;
+    }
+    h2{
+        font-size: 32px;
+    }
+    p{
+        font-size: 14px;
+    }
+    .section-p1 {
+        padding: 20px; 
+    }
+    #feature{
+        justify-content: space-between;
+    }
+    #feature .f-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #product1 .pro {
+        width: 100%;
+    }
+    #banner {
+        height: 40vh;
+    }
+    #sm-banner .banner-box {
+        height: 40vh;
+    }
+    #sm-banner .banner-box2 {
+       margin-top: 20px;
+    }
+    #banner3 {
+        padding: 0 20px;
+    }
+    #banner3 .banner-box {
+        width: 100%;
+    }
+    #newslatter {
+        padding: 40px 20px;
+    }
+    #newslatter .form {
+        width: 100%;
+    }
+    footer .copyright {
+        text-align: start;
+    }
+    #pro-detail {
+        flex-direction: column;
+    }
+    #pro-detail .single-pro-img {
+        width: 100%;
+    }
+    #pro-detail .single-pro-detail {
+        width: 100%;
+    }
+
+
+}
+/* ####################################
+################Shop Page###########
+#################################### */
+#page-header{
+    background-image: url('img/banner/b1.jpg');
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+}
+#page-header h2,
+#page-header p{
+    color: #fff;
+}
+#pagination{
+    text-align: center;
+}
+#pagination a{
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+#pagination a i{
+    font-size: 16px;
+    font-weight: 600;
+}
+/* ####################################
+################Product Detail Page###########
+#################################### */
+#pro-detail{
+    display: flex;
+    margin-top: 20px;
+}
+#pro-detail .single-pro-img{
+    width: 40%;
+    margin-right: 50px;
+}
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+.small-img-col{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+#pro-detail .single-pro-detail{
+    width: 50%;
+    margin-top: 30px;
+}
+#pro-detail .single-pro-detail h4{
+    padding: 40px 0 20px 0;
+}
+#pro-detail .single-pro-detail h2{
+    font-size: 26px;
+}
+#pro-detail .single-pro-detail select{
+    display: flex;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+#pro-detail .single-pro-detail input{
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+#pro-detail .single-pro-detail input{
+    outline: none;
+}
+#pro-detail .single-pro-detail button{
+    color: #fff;
+    background-color: #088178;
+}
+#pro-detail .single-pro-detail span{
+    line-height: 25px;
 }
 
 
-    
 
 
 
