--- a/style.css
+++ b/style.css
@@ -470,162 +470,6 @@ footer .copyright{
     width: 100%;
     text-align: center;
 }
-
-
-
-/* Start Media Query */
-/* ####################################
-######### IPAD DEVICE ###########
-#################################### */
-@media (max-width:768px) {
-    #navbar {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        position: fixed;
-        top: 0;
-        right: -300px;
-        height: 100vh;
-        width: 300px;
-        background-color: #E3E6F3;
-        box-shadow: 0 40px 60px rgba(0, 0,0, 0.1);
-        padding: 80px 0 0 10px;
-        transition: 0.3s;
-        
-    }
-    #navbar li{
-        margin-bottom: 25px;
-    }
-    #navbar.active{
-        right: 0px;
-    }
-    #mobile{
-        display: flex;
-        align-items: center;
-    }
-    #mobile i{
-        color: #1a1a1a;
-        font-size: 24px;
-        padding-left: 20px;
-    }
-    #close{
-        display: inline;
-        position: absolute;
-        top: 30px;
-        left: 40px;
-        color: #222;
-        font-size: 24px;
-    }
-    #shop{
-        display: none;
-    }
-    #hero {
-        height: 70vh;
-        padding: 0 80px;
-        background-position: top 30% right 30%;
-    }
-    #feature {
-        justify-content: center;
-    }
-    #feature .f-box {
-        margin: 15px 15px;
-    }
-    .section-p1 {
-        padding: 40px 40px;
-    }
-    #product1 .pro-ctn {
-        justify-content: center;
-    }
-    #product1 .pro {
-       margin: 15px;
-    }
-    #banner {
-        height: 20vh;
-    }
-    #sm-banner .banner-box {
-        min-width: 100%;
-        height: 30vh;       
-    }
-    #banner3 {
-        padding: 0 40px;
-    }
-    #banner3 .banner-box {
-       width: 28%;
-    }
-    #newslatter .form {
-        width: 70%;
-    }
-}
-/* ####################################
-############# MOBILE DEVICE ###########
-#################################### */
-@media (max-width: 477px) {s
-    #header {
-    padding: 10px 30px;
-    }
-    #hero {
-        padding: 0 20px;
-        background-position: 55%;
-    }
-    h1{
-        font-size: 38px;
-    }
-    h2{
-        font-size: 32px;
-    }
-    p{
-        font-size: 14px;
-    }
-    .section-p1 {
-        padding: 20px; 
-    }
-    #feature{
-        justify-content: space-between;
-    }
-    #feature .f-box {
-        width: 155px;
-        margin: 0 0 15px 0;
-    }
-    #product1 .pro {
-        width: 100%;
-    }
-    #banner {
-        height: 40vh;
-    }
-    #sm-banner .banner-box {
-        height: 40vh;
-    }
-    #sm-banner .banner-box2 {
-       margin-top: 20px;
-    }
-    #banner3 {
-        padding: 0 20px;
-    }
-    #banner3 .banner-box {
-        width: 100%;
-    }
-    #newslatter {
-        padding: 40px 20px;
-    }
-    #newslatter .form {
-        width: 100%;
-    }
-    footer .copyright {
-        text-align: start;
-    }
-    #pro-detail {
-        flex-direction: column;
-    }
-    #pro-detail .single-pro-img {
-        width: 100%;
-    }
-    #pro-detail .single-pro-detail {
-        width: 100%;
-    }
-
-
-}
 /* ####################################
 ################Shop Page###########
 #################################### */
@@ -709,8 +553,501 @@ footer .copyright{
     background-color: #088178;
 }
 #pro-detail .single-pro-detail span{
+    line-height: 30px;
+}
+/* ####################################
+############# BLOG PAGE ###########
+#################################### */
+#page-header.blog-header{
+    background-image: url("img/banner/b19.jpg");
+}
+#blog{
+    padding: 150px 150px 0 150px;
+}
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    padding-bottom: 90px;
+}
+#blog .blog-img{
+    width: 50%;
+    margin-right: 40px;
+}
+#blog img{
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+}
+#blog .blog-detail{
+    width: 50%;
+}
+#blog .blog-detail a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    transition: 0.3s;
+}
+#blog .blog-detail a::after{
+    content: "";
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    right: -60px;
+}
+#blog .blog-detail a:hover{
+    color: #088178;
+}
+#blog .blog-detail a:hover::after{
+    background-color: #088178;
+}
+#blog h1{
+    position: absolute;
+    top: -40px;
+    left: 0px;
+    font-size: 70px;
+    font-weight: 700;
+    color: #c9cbce;
+    z-index: -9;
+}
+/* ####################################
+############# ABOUT PAGE ###########
+#################################### */
+#page-header.about-header{
+    background-image: url("img/about/banner.png");
+}
+#about-h {
+    display: flex;
+    align-items: center;
+}
+#about-h img{
+    width: 50%;
+    height: auto;
+}
+#about-h div{
+    padding-left: 40px;
+}
+#about-app {
+    text-align: center;
+}
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+#about-app .video video{
+    height: 100%;
+    width: 100%;
+    border-radius: 20px ;
+}
+/* ####################################
+######### CONTACT PAGE ###########
+#################################### */
+#contact-detail{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#contact-detail .detail{
+    width: 40%;
+}
+#contact-detail .detail span,
+#form-detail form span{
+    font-size: 12px;
+}
+#contact-detail .detail h2,
+#form-detail form h2{
+    font-size: 26px;
+    line-height: 35px;
+    padding: 20px 0;
+}
+#contact-detail .detail h3{
+    font-size: 26px;
+    padding-bottom: 15px;
+}
+#contact-detail .detail li{
+    list-style: none;
+    display: flex;
+    padding: 10px 0;
+}
+#contact-detail .detail li i{
+    font-size: 14px;
+    padding-right: 22px;
+}
+#contact-detail .detail li p{
+    margin: 0;
+    font-size: 14px;
+}
+#contact-detail .map{
+    width: 55%;
+    height: 400px;
+}
+#contact-detail .map iframe{
+    width: 100%;
+    height: 100%;
+}
+#form-detail{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    padding: 80px;
+    border: 1px solid #e1e1e1;
+}
+#form-detail form{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#form-detail form input,
+#form-detail form textarea{
+    width: 100%;
+    padding: 12px 15px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid #e1e1e1;
+}
+#form-detail form button{
+    background-color: #088178;
+    color: #fff;
+}
+#form-detail .people div{
+    padding-bottom: 25px;
+    display: flex;
+    align-items: flex-start;
+}
+#form-detail .people div img{
+    width: 65px;
+    height: 65px;
+    object-fit: cover;
+    margin-right: 15PX;
+}
+#form-detail .people div p{
+    margin: 0;
+    font-size: 13px;
     line-height: 25px;
 }
+#form-detail .people div p span{
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
+}
+/* ####################################
+######### CART PAGE ###########
+#################################### */
+#cart table{
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    white-space: nowrap;
+}
+#cart table img{
+    width: 70px;
+}
+#cart table td:nth-child(1){
+    width: 100px;
+    text-align: center;
+}
+#cart table td:nth-child(2){
+    width: 150px;
+    text-align: center;
+}
+#cart table td:nth-child(3){
+    width: 250px;
+    text-align: center;
+}
+#cart table td:nth-child(4),
+#cart table td:nth-child(5),
+#cart table td:nth-child(6){
+    width: 150px;
+    text-align: center;
+}
+#cart table td:nth-child(5) input{
+    width: 70px;
+    padding: 10px 5px 10px 15px;
+}
+#cart table thead{
+    border: 1px solid #e2e9e1;
+    border-left: none;
+    border-right:none ;
+}
+#cart table thead td{
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 18px 0;
+}
+#cart table tbody tr td{
+    padding-top: 15px;
+}
+#cart table tbody td{
+    font-size: 13px;
+}
+#cart-add{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#coupon{
+    width: 50%;
+    margin-bottom: 30px;
+}
+#coupon h3{
+    padding-bottom: 15px;
+}
+#coupon input{
+    padding: 10px 20px;
+    outline: none;
+    width: 60%;
+    margin-right: 10px;
+    border: 1px solid #e2e9e1;
+}
+#coupon button{
+    background-color: #088178;
+    color: #fff;
+    padding: 12px 20px;
+}
+#subtotal{
+    width: 50%;
+    margin-bottom: 30px;
+    border: 1px solid #e1e1e1;
+    padding: 30px;
+}
+#subtotal table{
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+#subtotal table td{
+    width: 50%;
+    border: 1px solid #e1e1e1;
+    padding: 10px;
+    font-size: 13px;
+    text-align: center;
+}
+/* Start Media Query */
+/* ####################################
+######### IPAD DEVICE ###########
+#################################### */
+@media (max-width:768px) {
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0, 0,0, 0.1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #navbar.active{
+        right: 0px;
+    }
+    #mobile{
+        display: flex;
+        align-items: center;
+    }
+    #mobile i{
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+    #close{
+        display: inline;
+        position: absolute;
+        top: 30px;
+        left: 40px;
+        color: #222;
+        font-size: 24px;
+    }
+    #shop{
+        display: none;
+    }
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    #feature {
+        justify-content: center;
+    }
+    #feature .f-box {
+        margin: 15px 15px;
+    }
+    .section-p1 {
+        padding: 40px 40px;
+    }
+    #product1 .pro-ctn {
+        justify-content: center;
+    }
+    #product1 .pro {
+       margin: 15px;
+    }
+    #banner {
+        height: 20vh;
+    }
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 30vh;       
+    }
+    #banner3 {
+        padding: 0 40px;
+    }
+    #banner3 .banner-box {
+       width: 28%;
+    }
+    #newslatter .form {
+        width: 70%;
+    }
+    /* contact Page */
+    #form-detail {
+        padding: 40px;
+    }
+    #form-detail form {
+        width: 50%;
+    }
+}
+
+/* ####################################
+############# MOBILE DEVICE ###########
+#################################### */
+@media (max-width: 477px) {
+    #header {
+    padding: 10px 30px;
+    }
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    h1{
+        font-size: 38px;
+    }
+    h2{
+        font-size: 32px;
+    }
+    p{
+        font-size: 14px;
+    }
+    .section-p1 {
+        padding: 20px; 
+    }
+    #feature{
+        justify-content: space-between;
+    }
+    #feature .f-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #product1 .pro {
+        width: 100%;
+    }
+    #banner {
+        height: 40vh;
+    }
+    #sm-banner .banner-box {
+        height: 40vh;
+    }
+    #sm-banner .banner-box2 {
+       margin-top: 20px;
+    }
+    #banner3 {
+        padding: 0 20px;
+    }
+    #banner3 .banner-box {
+        width: 100%;
+    }
+    #newslatter {
+        padding: 40px 20px;
+    }
+    #newslatter .form {
+        width: 100%;
+    }
+    footer .copyright {
+        text-align: start;
+    }
+    /* DetailPage */
+    #pro-detail {
+        display: flex;
+        flex-direction: column;
+    }
+    #pro-detail .single-pro-img {
+        width: 100%;
+        margin-right: 100px;
+    }
+    #pro-detail .single-pro-detail {
+        width: 100%;
+    }
+     /* Blog page */
+     #blog {
+        padding: 100px 20px 0 20px;
+    }
+     #blog .blog-box {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column; 
+    }
+    #blog .blog-img {
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 30px;
+    }
+    #blog .blog-detail {
+        width: 100%;
+    }
+    /* About Page */
+    #about-h {
+       flex-direction: column;
+    }
+    #about-h img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #about-h div {
+        padding-left: 0px;
+    }
+    #about-app .video {
+        width: 100%;
+    }
+    /* Contact page */
+    #contact-detail { 
+        flex-direction: column;   
+    }
+    #contact-detail .detail {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    #contact-detail .map {
+        width: 100%;
+    }
+    #form-detail {
+        margin: 10px;
+        padding: 30px 0;
+        flex-wrap: wrap;
+    }
+    #form-detail form {
+        width: 100%;
+        margin-bottom: 30PX;
+        padding: 0 20px;
+    }
+    #form-detail .people{
+        padding: 0 20px;
+    }
+}
+
 
 
 
